--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -33,9 +33,9 @@
         android:name="com.example.taskapp_m4.ui.profile.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile"/>
-<!--    <fragment-->
-<!--        android:id="@+id/onBoardFragment"-->
-<!--        android:name="com.example.taskapp_m4.ui.onBoard.OnBoardFragment"-->
-<!--        android:label="fragment_on_board"-->
-<!--        tools:layout="@layout/fragment_on_board" />-->
+    <fragment
+        android:id="@+id/onBoardFragment"
+        android:name="com.example.taskapp_m4.ui.onBoard.OnBoardFragment"
+        android:label="fragment_on_board"
+        tools:layout="@layout/fragment_on_board" />
 </navigation>
