--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,7 +35,7 @@
         tools:layout="@layout/fragment_profile"/>
     <fragment
         android:id="@+id/onBoardFragment"
-        android:name="com.example.taskapp_m4.ui.profile.onBoard.OnBoardFragment"
+        android:name="com.example.taskapp_m4.ui.onBoard.OnBoardFragment"
         android:label="fragment_on_board"
         tools:layout="@layout/fragment_on_board" />
 </navigation>
